[package]
name = "opt-rw"
version = "0.1.0"
edition = "2024"

[lib]
name = "opt_rw"
path = "src/lib.rs"

[dependencies]
derive_more = { version = "*", features = ["from_str"] }
egg = "*"
rustc-hash = "*"
lalrpop-util = { version = "*", features = ["lexer", "unicode"] }

[build-dependencies]
lalrpop = "*"
